<resources>
    <string name="app_name">Laboratorio 8</string>
    <string name="az">Ordenar: A - Z</string>
    <string name="za">Ordenar: Z - A</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="episode_appearances">Episodes</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="loginTxt">Iniciar Sesión</string>
    <string name="mail">flo21500@uvg.edu.gt</string>
    <string name="logout">Cerrar sesión</string>
    <string name="sync">Sincronizar</string>
    <string name="borrar">Borrar</string>
    <string name="name">Name</string>
    <string name="guardar">Guardar</string>
</resources>