<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/img_w"
        android:layout_height="@dimen/img_h"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mail"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintBottom_toTopOf="@id/pw"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_large">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/correo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_large">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/contrase_a" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/pw"
        app:layout_constraintBottom_toTopOf="@id/mailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/loginTxt" />

    <TextView
        android:id="@+id/mailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_large"/>

</androidx.constraintlayout.widget.ConstraintLayout>